<resources>
    <string name="app_name">OBD2</string>
    <string name="livedaten_anzeigen">Livedaten anzeigen</string>
    <string name="fehlercodes_anzeigen">Fehlercodes anzeigen</string>
    <string name="title_activity_livedaten_tabs">LivedatenTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="update">Aktualisieren</string>
    <string name="delete_all">Alle löschen</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="preference_mqtt_ipaddress_default">tcp://10.3.141.1:1883</string>
    <string name="preference_mqtt_ipaddress_key">mqtt_ipaddress</string>
    <string name="preference_mqtt_ipaddress">IP-Adresse</string>
    <string name="preference_mqtt_user">Username</string>
    <string name="preference_mqtt_pass">Passwort</string>
    <string name="preference_mqtt_user_key">mqtt_user</string>
    <string name="preference_mqtt_pass_key">mqtt_pass</string>
    <string name="preference_mqtt_user_default">tiqhoouh</string>
    <string name="preference_mqtt_pass_default">9hhO2nOCJoGp</string>

    <string name="preference_pace_title">Geschwindigkeit</string>
    <string name="preference_rpm_title">Motordrehzahl</string>
    <string name="preference_oiltemp_title">Öltemperatur</string>
    <string name="preference_coolwatertemp_title">Kühlwassertemperatur</string>
    <string name="preference_dtccount_title">Anzahl der DTCs</string>
    <string name="preference_fuellevel_title">Kraftstoffstand</string>
    <string name="preference_fuelrate_title">Kraftstoffverbrauch</string>
    <string name="preference_ladedruck_title">Ladedruck</string>
    <string name="preference_throttlepos_title">Throttle-Position</string>

    <string name="preference_pace_key">setting_check_pace</string>
    <string name="preference_rpm_key">setting_check_rpm</string>
    <string name="preference_oiltemp_key">setting_check_oiltemp</string>
    <string name="preference_coolwatertemp_key">setting_check_coolwatertemp</string>
    <string name="preference_dtccount_key">setting_check_dtccount</string>
    <string name="preference_fuellevel_key">setting_check_fuellevel</string>
    <string name="preference_fuelrate_key">setting_check_fuelrate</string>
    <string name="preference_ladedruck_key">setting_check_ladedruck</string>
    <string name="preference_throttlepos_key">setting_check_throttlepos</string>
    <string name="pref_category_title">Livedaten Anzeigeoptionen</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="chart">Datenbank</string>
</resources>
