<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/preference_mqtt_ipaddress"
        android:key="@string/preference_mqtt_ipaddress_key"
        android:defaultValue="@string/preference_mqtt_ipaddress_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="@string/preference_mqtt_user"
        android:key="@string/preference_mqtt_user_key"
        android:defaultValue="@string/preference_mqtt_user_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="@string/preference_mqtt_pass"
        android:key="@string/preference_mqtt_pass_key"
        android:defaultValue="@string/preference_mqtt_pass_default"
        android:inputType="textMultiLine" />

</PreferenceScreen>